--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -144,6 +144,9 @@
             }
         });
     });
+
+    // Used for Ideogram for related genes
+    window.SCP.taxons = <%= raw @taxons.to_json %>;
   <% end %>
     $('#ideogram_annotation').on('change', function() {
         var ideogramFiles = <%= raw @ideogram_files.to_json %>;
