Omit related genes ideogram in multi-gene search

--- a/app/views/site/_search_options.html.erb
+++ b/app/views/site/_search_options.html.erb
@@ -109,11 +109,12 @@
 
                         launchModalSpinner('#spinner_target', '#loading-modal', function() {
                             var genes = window.SCP.formatTerms($('#search_genes').val())
+                            var numGenes = genes.length
                             var searchLogProps = {
                               type: 'gene',
                               context: 'study',
                               genes,
-                              numGenes: genes.length,
+                              numGenes,
                               trigger: event.type // "submit" or "click"
                             }
 
@@ -125,7 +126,7 @@
                             );
                             var form = $('#search-genes-form');
 
-                            if (window.SCP.taxons.length === 1) {
+                            if (window.SCP.taxons.length === 1 && numGenes === 1) {
                               window.SCP.taxon = window.SCP.taxons[0];
                               createRelatedGenesIdeogram();
                             }
