Apply suggestions from code review
Co-authored-by: Eric Weitz <eweitz@broadinstitute.org>

--- a/app/javascript/styles/_search.scss
+++ b/app/javascript/styles/_search.scss
@@ -328,12 +328,11 @@ nav.search-links, #search-panel {
   padding-top: 0.65em;
 }
 
-.newFeature {
+.new-feature {
   padding: 0.15em 0.35em;
   border-radius: 3px;
   background: #d95350;
   font-weight: bold;
   color: #fff;
 }
-
 
