--- a/app/views/site/_search_options.html.erb
+++ b/app/views/site/_search_options.html.erb
@@ -115,14 +115,14 @@
                               context: 'study',
                               genes,
                               numGenes,
-                              trigger: event.type // "submit", "click", or "click-related-genes"
+                              trigger: event.type, // "submit", "click", or "click-related-genes"
+                              speciesList: window.SCP.taxons
                             }
 
                             // Merge log props from custom event
                             if (event.type === 'click-related-genes') {
                               searchLogProps = Object.assign(event, searchLogProps)
                             }
-
 
                             var searchEvent = window.SCP.startPendingEvent('search', searchLogProps);
                             // also start measuring the end-to-end user experience event
