--- a/app/views/single_cell_mailer/share_notification.html.erb
+++ b/app/views/single_cell_mailer/share_notification.html.erb
@@ -1,6 +1,8 @@
-<p>The following study on the <%= link_to 'Single Cell Portal', studies_url %> has been shared:</p>
+<p>
+  The study '<%= @study.name %>'
+  (<%= link_to @study.accession, view_study_url(accession: @study.accession, study_name: @study.url_safe_name) %>)
+  has been shared:</p>
 <hr />
-<p><strong>Name: </strong><%= @study.name %></p>
-<p><strong>Owner: </strong><%= @user.email %></p>
+
 <p><strong>Shared With: </strong><%= @share.email %></p>
 <p><strong>Granted Permission: </strong><%= @share.permission %></p>
