--- a/app/views/studies/_expression_file_fields.html.erb
+++ b/app/views/studies/_expression_file_fields.html.erb
@@ -4,3 +4,8 @@
     <%= f.text_field :y_axis_label, value: @study.has_expression_label? ? @study.default_expression_label : f.object.y_axis_label, placeholder: @study.default_expression_label, class: 'form-control', disabled: @study.has_expression_label? %>
   </div>
 </div>
+<div class="form-group">
+  <% f.object.build_expression_file_info if f.object.expression_file_info.nil? %>
+  <%= f.fields_for :expression_file_info %>
+</div>
+
