--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_for(study_file, url: update_study_file_study_path(@study._id), html: {id: "expression_form_#{study_file._id}", class: "initialize_expression_form #{study_file.new_record? ? 'new-expression-form' : nil}", data: {remote: true}}) do |f| %>
+<%= nested_form_for(study_file, url: update_study_file_study_path(@study._id),
+                    html: {multipart: true, id: "expression_form_#{study_file._id}",
+                           class: "initialize_expression_form #{study_file.new_record? ? 'new-expression-form' : nil}",
+                           data: {remote: true}}) do |f| %>
 	<%= render partial: 'study_file_errors', locals: {study_file: study_file} %>
   <%= f.hidden_field :study_id, value: params[:id] %>
   <%= f.hidden_field :_id, value: study_file._id %>
@@ -27,6 +30,10 @@
       <%= f.label :y_axis_label, 'Expression Axis Label' %>&nbsp;<span class="fas fa-question-circle expression-label-tooltip" data-toggle="tooltip" data-placement="right" title="This is displayed as the axis label for box & scatter plots showing expression values.  This label is global to all expression values.<%= @study.has_expression_label? ? ' Please use the study default options form to update this value.' : '' %>"></span> <br />
       <%= f.text_field :y_axis_label, value: @study.has_expression_label? ? @study.default_expression_label : study_file.y_axis_label, placeholder: @study.default_expression_label, class: 'form-control expression-label', disabled: @study.has_expression_label? %>
     </div>
+  </div>
+  <div class="form-group">
+    <% study_file.build_expression_file_info if study_file.expression_file_info.nil? %>
+    <%= f.fields_for :expression_file_info %>
   </div>
 	<div class="form-group row">
 		<div class="col-sm-4">
@@ -161,6 +168,11 @@
         }
 			});
 		});
+
+      $('#expression_form_<%= study_file._id %>').on('nested:fieldAdded', function(event){
+          $('#add-expression-file-info').tooltip('destroy')
+          $('#add-expression-file-info').remove()
+      })
 
 	</script>
 
