--- a/app/views/studies/_orphaned_study_file_form.html.erb
+++ b/app/views/studies/_orphaned_study_file_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(study_file, url: sync_orphaned_study_file_study_path(@study._id), html: {id: "study-file-#{study_file._id}" , class: "bs-callout bs-callout-danger" }, data: {remote: true}) do |f| %>
+<%= nested_form_for(study_file, url: sync_orphaned_study_file_study_path(@study._id),
+                    html: {multipart: true, id: "study-file-#{study_file._id}" ,
+                           class: "bs-callout bs-callout-danger" }, data: {remote: true}) do |f| %>
   <%= render partial: 'study_file_errors', locals: {study_file: study_file} %>
   <%= f.hidden_field :study_id, value: params[:id] %>
   <%= f.hidden_field :_id, value: study_file._id %>
