--- a/app/views/studies/_synced_study_file_form.html.erb
+++ b/app/views/studies/_synced_study_file_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(study_file, url: update_study_file_from_sync_study_path(@study._id), html: {id: "study-file-#{study_file.id}" , class: "synced-study-file" }, data: {remote: true}) do |f| %>
+<%= nested_form_for(study_file, url: update_study_file_from_sync_study_path(@study._id),
+             html: {multipart: true, id: "study-file-#{study_file.id}" , class: "synced-study-file" },
+             data: {remote: true}) do |f| %>
   <%= render partial: 'study_file_errors', locals: {study_file: study_file} %>
   <%= f.hidden_field :study_id, value: params[:id] %>
   <%= f.hidden_field :_id, value: study_file._id %>
