--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -31,6 +31,7 @@
                   </thead>
                 </table>
               <% end %>
+              Then <%= link_to "click here".html_safe, "#{api_v1_study_path(@study)}/manifest" %> for the manifest.json containing file supplementary information (units, protocols, etc...)
             <% elsif @study.public? && !@user_embargoed || current_user.admin? %>
               <p class="lead">To download all files using <code>curl</code>, click the button below to get the download command:</p>
               <p class="lead command-container" id="command-container-all"><%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe, '#/', class: 'btn btn-default get-download-command', id: 'get-download-command_all' %></p>
@@ -97,7 +98,7 @@
           // Get a time-based one time authentication token (totat),
           // then show the download command
           $.ajax({
-              url: '/single_cell/totat',
+              url: '/single_cell/api/v1/search/auth_code',
               type: 'post',
               dataType: 'json',
               success: function (response) {
@@ -105,24 +106,20 @@
                   var timeInterval = response.time_interval; // token expires after this many seconds
 
                   var expiresMinutes = timeInterval / 60;
-
+                  const accession = <%= @study.accession %>
+                  const curlSecureFlag = "<%= Rails.env.development? ? '-k' : '' %>"
                   // Gets a curl configuration ("cfg.txt") containing signed
                   // URLs and output names for all files in the download object.
                   var url = (
-                      window.location.origin +
-                      '/single_cell/bulk_data' +
-                      '/<%= @study.accession %>' +
-                      '/<%= @study.url_safe_name %>' +
-                      '/' + downloadObject +
-                      '/' + totat
+                    window.location.origin +
+                    '/single_cell/api/v1/search/bulk_download?' +
+                    `accessions=${accession}` +
+                    `&auth_code=${totat}`
                   );
 
-                  var curlSecureFlag = (window.location.host === 'localhost') ? 'k' : ''; // "-k" === "--insecure"
-
                   // This is what the user will run in their terminal to download the data.
-                  // TODO: Consider checking the node environment (either at compile or runtime) instead of the hostname
                   var downloadCommand = (
-                      'curl &quot;' + url + '&quot; -' + curlSecureFlag + 'o cfg.txt; ' +
+                      'curl &quot;' + url + '&quot; ' + curlSecureFlag + ' -o cfg.txt; ' +
                       'curl -K cfg.txt; rm cfg.txt'
                   );
 
@@ -193,7 +190,7 @@
       </tr>
     <% end %>
       <tr>
-        <td>Manifest</td>
+        <td>manifest.json</td>
         <td>Listing of all study files, and any supplementary information (units, protocols, etc...)</td>
         <td></td>
         <td></td>
