--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -97,51 +97,48 @@
 
           // Get a time-based one time authentication token (totat),
           // then show the download command
-          $.ajax({
-              url: '/single_cell/api/v1/search/auth_code',
-              type: 'post',
-              dataType: 'json',
-              success: function (response) {
-                  var totat = response.totat;
-                  var timeInterval = response.time_interval; // token expires after this many seconds
+          window.SCP.ScpApi.fetchAuthCode().then(
+            function (response) {
+              var authCode = response.authCode;
+              var timeInterval = response.timeInterval; // token expires after this many seconds
+              debugger;
+              var expiresMinutes = timeInterval / 60;
+              const accession = "<%= @study.accession %>"
+              const curlSecureFlag = "<%= Rails.env.development? ? '-k' : '' %>"
+              // Gets a curl configuration ("cfg.txt") containing signed
+              // URLs and output names for all files in the download object.
+              var url = (
+                window.location.origin +
+                '/single_cell/api/v1/search/bulk_download?' +
+                `accessions=${accession}` +
+                `&auth_code=${authCode}`
+              );
 
-                  var expiresMinutes = timeInterval / 60;
-                  const accession = <%= @study.accession %>
-                  const curlSecureFlag = "<%= Rails.env.development? ? '-k' : '' %>"
-                  // Gets a curl configuration ("cfg.txt") containing signed
-                  // URLs and output names for all files in the download object.
-                  var url = (
-                    window.location.origin +
-                    '/single_cell/api/v1/search/bulk_download?' +
-                    `accessions=${accession}` +
-                    `&auth_code=${totat}`
-                  );
+              // This is what the user will run in their terminal to download the data.
+              var downloadCommand = (
+                  'curl &quot;' + url + '&quot; ' + curlSecureFlag + ' -o cfg.txt; ' +
+                  'curl -K cfg.txt; rm cfg.txt'
+              );
 
-                  // This is what the user will run in their terminal to download the data.
-                  var downloadCommand = (
-                      'curl &quot;' + url + '&quot; ' + curlSecureFlag + ' -o cfg.txt; ' +
-                      'curl -K cfg.txt; rm cfg.txt'
-                  );
+              var commandID = 'command-' + authCode;
+              var commandContainer = $('#command-container-' + downloadObject);
+              var countdownValue = '<span class="countdown" id="countdown-' + authCode + '">' + expiresMinutes + '</span>';
 
-                  var commandID = 'command-' + totat;
-                  var commandContainer = $('#command-container-' + downloadObject);
-                  var countdownValue = '<span class="countdown" id="countdown-' + totat + '">' + expiresMinutes + '</span>';
-
-                  commandContainer.html(
-                      '<div class="input-group">' +
-                      '<input id="' + commandID + '" class="form-control curl-download-command" value="' + downloadCommand + '" readonly/>' +
-                      '<span class="input-group-btn">' +
-                      '<button id="copy-button-' + totat + '" class="btn btn-default btn-copy" data-clipboard-target="#' + commandID + '" data-toggle="tooltip" title="Copy to clipboard">' +
-                      '<i class="far fa-copy"></i>' +
-                      '</button>' +
-                      '<button id="refresh-button-' + totat + '" class="btn btn-default btn-refresh glyphicon glyphicon-refresh" data-toggle="tooltip" style="top: -0.5px;" title="Refresh download command">' +
-                      '</button>' +
-                      '</span>' +
-                      '</div>' +
-                      '<div style="font-size: 12px">Valid for one use within ' + countdownValue + ' minutes.  Paste into Mac/Linux/Unix terminal and execute to download.</div>'
-                  );
-              }
-          });
+              commandContainer.html(
+                  '<div class="input-group">' +
+                  '<input id="' + commandID + '" class="form-control curl-download-command" value="' + downloadCommand + '" readonly/>' +
+                  '<span class="input-group-btn">' +
+                  '<button id="copy-button-' + authCode + '" class="btn btn-default btn-copy" data-clipboard-target="#' + commandID + '" data-toggle="tooltip" title="Copy to clipboard">' +
+                  '<i class="far fa-copy"></i>' +
+                  '</button>' +
+                  '<button id="refresh-button-' + authCode + '" class="btn btn-default btn-refresh glyphicon glyphicon-refresh" data-toggle="tooltip" style="top: -0.5px;" title="Refresh download command">' +
+                  '</button>' +
+                  '</span>' +
+                  '</div>' +
+                  '<div style="font-size: 12px">Valid for one use within ' + countdownValue + ' minutes.  Paste into Mac/Linux/Unix terminal and execute to download.</div>'
+              );
+            }
+          );
         }
 
         // Show the download command upon clicking the "Get download command" button
@@ -190,7 +187,7 @@
       </tr>
     <% end %>
       <tr>
-        <td>manifest.json</td>
+        <td>manifest.json <i>(auto-generated)</i></td>
         <td>Listing of all study files, and any supplementary information (units, protocols, etc...)</td>
         <td></td>
         <td></td>
