fixing sync form for bundles

--- a/app/views/studies/_expression_file_fields.html.erb
+++ b/app/views/studies/_expression_file_fields.html.erb
@@ -5,7 +5,9 @@
   </div>
 </div>
 <div class="form-group">
-  <% f.object.build_expression_file_info if f.object.expression_file_info.nil? %>
-  <%= f.fields_for :expression_file_info %>
+  <% if ['Expression Matrix', 'MM Coordinate Matrix'].include? f.object.file_type %>
+    <% f.object.build_expression_file_info if f.object.expression_file_info.nil? %>
+    <%= f.fields_for :expression_file_info %>
+  <% end %>
 </div>
 
