moving totat checking logic to authenticator, adding Rails manifest endpoint

--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -191,7 +191,7 @@
         <td>Listing of all study files, and any supplementary information (units, protocols, etc...)</td>
         <td></td>
         <td></td>
-        <td><%= link_to "<span class='fas fa-download'></span> 1 KB".html_safe, "#{api_v1_study_path(@study)}/manifest", class: "btn btn-primary dl-link" %>
+        <td><%= link_to "<span class='fas fa-download'></span> 1 KB".html_safe, "#{study_path(@study)}/manifest", class: "btn btn-primary dl-link" %>
         </td>
       </tr>
     </tbody>
