--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -658,6 +658,11 @@ ul.pager li.dimmed {
   opacity: 0.5;
 }
 
+.radio-pad {
+  padding-left: 10px;
+  padding-right: 15px;
+}
+
 #deployment_notification_message {
   width: 100%;
 }
