--- a/app/views/studies/_upload_success_modal_content.html.erb
+++ b/app/views/studies/_upload_success_modal_content.html.erb
@@ -7,11 +7,14 @@
       <div class="modal-body">
         <h4 class="text-center text-success">Your file has successfully been uploaded.</h4>
         <% if study_file.parseable? && study_file.able_to_parse? %>
-          <p class="lead text-center">Your file is currently being parsed.  You will receive an email at <%= current_user.email %> when the parse has completed.</p>
+          <p>Your file is currently being parsed.  You will receive an email at <%= current_user.email %> when the parse has completed.</p>
         <% elsif study_file.parseable? && !study_file.able_to_parse? %>
-          <p class="lead text-center text-danger">This file type requires other associated files to complete parsing.  Please use the new forms below to add the necessary files.</p>
+          <p class="text-danger">This file type requires other associated files to complete parsing.  Please use the new forms below to add the necessary files.</p>
         <% elsif !study_file.parseable? && study_file.study_file_bundle.present? && !study_file.study_file_bundle.completed? %>
-          <p class="lead text-center text-danger">This file type requires other associated files in order to be utilized in the portal.  Please use the new forms below to add the necessary files.</p>
+          <p class="text-danger">This file type requires other associated files in order to be utilized in the portal.  Please use the new forms below to add the necessary files.</p>
+        <% end %>
+        <% if study_file.is_expression? %>
+          <%= render partial: 'raw_counts_modal', locals: {is_raw_counts: study_file.is_raw_counts_file?, study_id: study_file.study_id} %>
         <% end %>
       </div>
       <div class="modal-footer">
