--- a/app/views/studies/_raw_counts_modal.html.erb
+++ b/app/views/studies/_raw_counts_modal.html.erb
@@ -6,7 +6,7 @@
     visualization, please also upload your matrix as a "non-raw" expression matrix.
   </p>
 <% else %>
-  <h4 class="text-center text-success">Raw data is important</h4>
+  <h4 class="text-center text-success">Raw counts are important</h4>
   <p>
     In addition to uploading your expression matrix for visualization purposes, it is helpful to add your expression data
     in its raw form.  This is helpful for other users who would like to reanalyze your data.
