--- a/app/views/studies/_initialize_ordinations_form.html.erb
+++ b/app/views/studies/_initialize_ordinations_form.html.erb
@@ -17,6 +17,21 @@
 		</div>
 	</div>
   <div class="form-group row">
+    <div class="col-sm-12">
+      <%= f.label :is_spatial, 'Coordinate data type: ' %><br/>
+      <%= f.label :is_spatial_false do %>
+        <%= f.radio_button :is_spatial, false %>
+        Clustering
+      <% end %>
+      &nbsp;
+      <%= f.label :is_spatial_true do %>
+        <%= f.radio_button :is_spatial, true %>
+        Spatial transcriptomics positions
+      <% end %>
+
+    </div>
+  </div>
+  <div class="form-group row">
     <div class="col-sm-4">
       <%= f.label :x_axis_label, 'X Axis Label' %><br />
       <%= f.text_field :x_axis_label, class: 'form-control' %>
