--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -57,5 +57,6 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
   window.SCP.studyAccession = '<%= @study.accession %>';
 
+  window.SCP.initializeExplore();
+
 </script>
-<%= nonced_javascript_include_tag 'study_overview/study-overview' %>
