--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -89,31 +89,7 @@
       <div class="well well-sm container-fluid upload-wizard">
         <div class="row">
         <h2 class="col-sm-12">Step 2. Upload Metadata File <small class="initialize-label" id="initialize_metadata_form_completed"></small></h2>
-        <p class="text-center"><%= link_to 'Metadata File', 'https://raw.githubusercontent.com/broadinstitute/single_cell_portal/master/demo_data/metadata_example.txt', target: :_blank %></p>
-        </div>
-        <div class="row">
-        <pre class="code-example col-sm-4 col-sm-offset-4">NAME&#09;Cluster&#09;Sub-Cluster&#09;Average Intensity<br/>TYPE&#09;group&#09;group&#09;numeric<br/>CELL_0001&#09;CLST_A&#09;CLST_A_1&#09;7.742<br/>CELL_0002&#09;CLST_A&#09;CLST_A_1&#09;-13.745<br/>...</pre>
-        </div>
-        <div class="row">
-          <p class="col-sm-12 text-center">A <%= link_to 'metadata file', 'https://raw.githubusercontent.com/broadinstitute/single_cell_portal/master/demo_data/metadata_example.txt', target: :_blank %> (.txt or .txt.gz) is a tab or comma-delimited text file containing cell-level annotations. <strong>At minimum</strong> a metadata file has:</p>
-        </div>
-          <div class="col-md-9 col-lg-offset-2 col-md-offset-1">
-            <ul>
-              <li>2 columns</li>
-              <li>A header row containing the value <strong>“NAME”</strong> and column names for cluster-level annotations</li>
-              <li>A second row with:</li>
-              <ul>
-                <li>The header of <strong>“TYPE”</strong>to declare metadata types (see below).</li>
-                <li>A value for each metadata column declaring its datatype</li>
-                <ul>
-                  <li>The two accepted values are <strong>“group”</strong> (set membership) or <strong>“numeric”</strong> (continuous scores).*</li>
-                </ul>
-              </ul>
-            </ul>
-          </div>
-        <div class="row">
-        <p class="col-sm-12">* Group values are treated as literal strings, and numerics as floating-point numbers.</p>
-        </div>
+        <%= image_tag "metadata-convention-explainer.jpg", id: 'metadata-convention-explainer' %>
       </div>
 
       <div id="container-<%= @metadata_file.id %>">
