--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -675,6 +675,11 @@ h6,
   font-size: 18px;
 }
 
+#metadata-convention-explainer {
+  overflow-x: scroll;
+  margin-left: -7px;
+}
+
 #deployment_notification_message {
   width: 100%;
 }
