--- a/app/views/studies/_metadata_convention_help_popover.html.erb
+++ b/app/views/studies/_metadata_convention_help_popover.html.erb
@@ -1,7 +1,7 @@
-<a href="#/" title="Why use the metadata convention?" class="label label-default pull-right" id="metadata-convention-popover-<%= id %>"
+<a href="#/" title="Why use the metadata convention?" class="badge pull-right" id="metadata-convention-popover-<%= id %>"
    data-content="Using the metadata convention will enable your data to be discovered through an upcoming faceted search interface.  Using the convention means extra validation will be applied to ensure your metadata conforms to standard vocabularies.  <a href='https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-Convention' target='_blank'>Learn more</a>."
    data-toggle="popover">
-  Why?
+  i
 </a>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
