Link to metadata convention example file

--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -93,6 +93,7 @@
             <%= image_tag "metadata-convention-explainer.jpg" %>
           </div>
         </div>
+        <a id="metadata-convention-example-link" href="https://raw.githubusercontent.com/broadinstitute/single_cell_portal/master/demo_data/mc_compliant_metadata_example.tsv" target="_blank" rel="noreferrer">View required conventional metadata</a>
       </div>
 
       <div id="container-<%= @metadata_file.id %>">
