--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -680,6 +680,11 @@ h6,
   margin-left: -7px;
 }
 
+#metadata-convention-example-link {
+  float: left;
+  margin-top: 9px;
+}
+
 #deployment_notification_message {
   width: 100%;
 }
