--- a/app/views/studies/_initialize_metadata_form.html.erb
+++ b/app/views/studies/_initialize_metadata_form.html.erb
@@ -25,12 +25,12 @@
       <div>
         <%= f.label :use_metadata_convention, "Do you use SCP conventional names for required metadata column headers?" %> <%= render partial: 'metadata_convention_help_popover', locals: {id: f.object.id.to_s} %><br />
         <%= f.label :use_metadata_convention_true do %>
-          <%= f.radio_button :use_metadata_convention, true, disabled: !study_file.new_record?%>
+          <%= f.radio_button :use_metadata_convention, true, checked: true, disabled: !study_file.new_record?%>
           Yes
         <% end %>
         &nbsp;
         <%= f.label :use_metadata_convention_false do %>
-          <%= f.radio_button :use_metadata_convention, false, disabled: !study_file.new_record? %>
+          <%= f.radio_button :use_metadata_convention, false, checked: false, disabled: !study_file.new_record? %>
           No
         <% end %>
       </div>
