--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -6,4 +6,5 @@
 @import '/_keywordSearch.scss';
 @import '/_searchPanel.scss';
 @import './_resultsPanel.scss';
+@import '/_studyOverview.scss';
 @import '/_relatedGenesIdeogram.scss';
