--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -57,6 +57,6 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
   window.SCP.studyAccession = '<%= @study.accession %>';
 
-  window.SCP.initializeExplore();
+  window.SCP.exploreDefault();
 
 </script>
