Show 4 plots in single-gene scatter tab when spatial present

--- a/app/javascript/styles/_studyOverview.scss
+++ b/app/javascript/styles/_studyOverview.scss
@@ -1,8 +1,7 @@
-.dual-plot {
-  float: left;
-  margin-left: 0;
+.multiplot {
+  display: flex;
 }
-.dual-plot:last-of-type {
-  float: right;
-  margin-left: 60px;
+
+.multiplot .plot {
+  margin: 0 10px;
 }
