updating tests, peer review feedback, and adding SelfCleaningSuite

--- a/app/javascript/styles/_search.scss
+++ b/app/javascript/styles/_search.scss
@@ -312,6 +312,7 @@ nav.search-links, #search-panel {
   .graph-container {
     display: flex;
     align-items: center;
+    margin-top: 0.25em;
   }
 
   /* hide morpheus toolbar */
